--- a/sass/layouts/layout__768/_blog.scss
+++ b/sass/layouts/layout__768/_blog.scss
@@ -21,14 +21,16 @@
         }
 
         &__content {
-            overflow: hidden;
+            max-height: 280px;
             &__title {
                 margin-bottom: 15px;
                 font-size: rem(23px);
             }
-            &__text {
-                &::after {
-                }
+            
+        }
+        .content {
+            &__arrow {
+                display: unset;
             }
         }
     }
