--- a/sass/layouts/layout__000/_blog.scss
+++ b/sass/layouts/layout__000/_blog.scss
@@ -11,7 +11,6 @@
         margin-bottom: 50px;
     }
     .content {
-
         &__subtitle {
             margin-bottom: 30px;
         }
@@ -20,6 +19,14 @@
         }
         &__date {
             margin-bottom: 40px;
+        }
+        &__text {
+            span {
+                overflow: hidden;
+            }
+        }
+        &__arrow {
+            display: none;
         }
     }
 }
