--- a/css/style.css
+++ b/css/style.css
@@ -217,25 +217,37 @@ img {
 }
 
 .search {
+  position: relative;
   order: -1;
 }
-.search__lable {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.search__button {
   width: 20px;
   height: 20px;
+  background-color: #fff;
+  border: none;
+  position: relative;
+  z-index: 10;
 }
 .search__input {
+  position: absolute;
+  z-index: 5;
+  right: 0;
   display: none;
   border: none;
-  border-bottom: 1px solid #000;
+  padding: 0 0 3px 0;
+  font-family: "Lato", sans-serif;
+  color: #000;
+  letter-spacing: 0.05rem;
 }
 .search__input::placeholder {
   font-family: "Lato", sans-serif;
   font-size: 12px;
   letter-spacing: 0.1rem;
   line-height: 1.663;
+}
+.search:hover .search__input, .search:active .search__input, .search:focus .search__input {
+  display: unset;
+  border-bottom: 1px solid #000;
 }
 
 .main {
@@ -314,7 +326,7 @@ img {
   color: #7B7B7B;
   letter-spacing: 0.1rem;
   text-transform: capitalize;
-  background-color: transparent;
+  background-color: #fff;
   border: none;
   transition: all 0.3s ease;
 }
@@ -327,12 +339,17 @@ img {
 .main .arrow--view {
   justify-self: start;
 }
+.main .arrow--read {
+  display: inline-flex;
+  align-items: center;
+  gap: 5px;
+}
 .main .arrow--read span {
-  letter-spacing: 0;
-  font-size: 0;
+  display: none;
   transition: all 0.3s ease;
 }
 .main .arrow--read:hover span, .main .arrow--read:active span {
+  display: unset;
   letter-spacing: 0.1rem;
   font-size: 1rem;
 }
@@ -398,9 +415,6 @@ img {
 }
 .blog .content__date {
   margin-bottom: 40px;
-}
-.blog .content__text span {
-  overflow: hidden;
 }
 .blog .content__arrow {
   display: none;
@@ -632,15 +646,33 @@ img {
   .main .blog__block:first-child .blog__image {
     order: -1;
   }
-  .main .blog__content {
-    max-height: 280px;
-  }
   .main .blog__content__title {
     margin-bottom: 15px;
     font-size: 1.4375rem;
   }
+  .main .blog .content__text {
+    position: relative;
+  }
+  .main .blog .content__text span {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+  }
   .main .blog .content__arrow {
-    display: unset;
+    display: inline-flex;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+  }
+  .main .blog .content__arrow span {
+    width: 0.01px;
+    height: 1.66rem;
+    padding-left: 15px;
+    transition: all 0.3s ease;
+  }
+  .main .blog .content__arrow:hover span {
+    width: 100%;
   }
 }
 @media only screen and (min-width: 768px) {
