--- a/sass/layouts/layout__1200/_footer.scss
+++ b/sass/layouts/layout__1200/_footer.scss
@@ -1,30 +1,27 @@
-.footer {
-    padding: 70px 15px;
-    text-align: left;
+// .footer {
+//     &__wrapper {
+//         display: flex;
+//         justify-content: space-between;
+//         align-items: center;
+//         margin-bottom: 20px;
+//     }
 
-    &__wrapper {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 20px;
-    }
+//     &__title {
+//         font-size: rem(48px);
+//         line-height: 1.25;
+//         margin-bottom: 30px;
+//     }
 
-    &__title {
-        font-size: rem(48px);
-        line-height: 1.25;
-        margin-bottom: 30px;
-    }
+//     &__contacts {
+//         margin-bottom: 0;
+//     }
 
-    &__contacts {
-        margin-bottom: 0;
-    }
+//     &__social{
+//         justify-content: right;
+//         margin-bottom: 0;
+//     }
 
-    &__social{
-        justify-content: right;
-        margin-bottom: 0;
-    }
-
-    &__rights{
-        text-align: center;
-    }
-}
+//     &__rights{
+//         text-align: center;
+//     }
+// }
