--- a/sass/layouts/layout__768/_blog.scss
+++ b/sass/layouts/layout__768/_blog.scss
@@ -20,6 +20,7 @@
             }
         }
         &__content {
+            align-self: center;
             &__title {
                 margin-bottom: 15px;
                 font-size: rem(23px);
