--- a/sass/layouts/layout__768/_footer.scss
+++ b/sass/layouts/layout__768/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
     .container {
-        padding: 0 34px;
+        padding: 50px 34px;
     }
     &__title {
         font-size: rem(48px);
